--- a/TP5.ipynb
+++ b/TP5.ipynb
@@ -30,7 +30,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "OJjU5zI_-tjl",
-        "outputId": "0db669cd-127a-4582-85d3-c38b44ad6c45",
+        "outputId": "f80620d2-6a3d-49a1-ac72-6ef62617a182",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -59,7 +59,7 @@
       ],
       "metadata": {
         "id": "HBZjh4P4-1HE",
-        "outputId": "ed5f7011-de4f-4618-f14c-66ee48c16d72",
+        "outputId": "ad22b4a9-9aa7-4880-f4ed-88c47ec9f04b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,14 +72,14 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-090xdbq8\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-090xdbq8\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-pkkyaxr6\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-pkkyaxr6\n",
             "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit aac710a35f52bb78ab34d2e52517237941399eff\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4305 sha256=0acd70963c3ebef4bacbd79baeda5d15402026dd0163f8ef479b0c7003a24420\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-vvq3fa3l/wheels/db/c1/1f/a2bb07bbb4a1ce3c43921252aeafaa6205f08637e292496f04\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4305 sha256=0835ade09d77b38a8559fad56c5b2e7f42f3735b5b3323b097f64a30224fa313\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-udhk3ra8/wheels/db/c1/1f/a2bb07bbb4a1ce3c43921252aeafaa6205f08637e292496f04\n",
             "Successfully built NVCCPlugin\n",
             "Installing collected packages: NVCCPlugin\n",
             "Successfully installed NVCCPlugin-0.0.2\n"
@@ -108,7 +108,7 @@
       ],
       "metadata": {
         "id": "9gl_4Pn7_JR2",
-        "outputId": "1bdfe88c-add4-49c0-aef9-b96c212fce58",
+        "outputId": "ab6cc9ca-2dd5-44b9-a8bb-106c16fdbdc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -119,7 +119,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Mar 27 07:13:27 2023       \n",
+            "Wed Mar 29 13:05:53 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -128,7 +128,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   60C    P8    10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   46C    P8    10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -159,7 +159,7 @@
       ],
       "metadata": {
         "id": "6YGSePh_Q_DP",
-        "outputId": "829933fe-d217-4b07-883b-858e90d0dd74",
+        "outputId": "f3a6d6ca-ec5a-40ed-e6fa-b7849620fed9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -229,7 +229,7 @@
       ],
       "metadata": {
         "id": "2VMs5wjdRU0g",
-        "outputId": "a208f382-c9f8-46f4-9d29-60e4f978a01a",
+        "outputId": "b27595de-2b22-4834-d3b3-6e277cf384ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,7 +460,7 @@
       ],
       "metadata": {
         "id": "o8DiZxqTVzyD",
-        "outputId": "983cbd42-8408-498e-843f-b3dd34effded",
+        "outputId": "76cf0e8c-ebd3-4caf-dbd7-339c2ee1e7f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -595,12 +595,12 @@
       ],
       "metadata": {
         "id": "Rm-7gDO8BGH_",
-        "outputId": "814cbe62-28f0-4594-86cb-09d201405a56",
+        "outputId": "e8b38751-cfc7-4d12-a872-eb5a156a704c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,12 +618,12 @@
       ],
       "metadata": {
         "id": "PfakPQ1CHLUp",
-        "outputId": "da51925d-60f4-42cb-8f45-ce608a4ce661",
+        "outputId": "6624ba5a-6b11-4d25-bcb9-ce2e43af7066",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,12 +642,12 @@
       ],
       "metadata": {
         "id": "F4BRhsCtHLo6",
-        "outputId": "3804f72c-4469-473d-eb4e-ea6ac4393610",
+        "outputId": "f83ec60e-6c8f-4a8a-8399-be7e33458c39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,13 +727,14 @@
         "    if (depth < n && row < n && col < n) {\n",
         "\n",
         "        for (int k = 0; k < n; k++) {\n",
-        "            sum += a[depth * n * n + row * n + k] * b[k * n * n + col * n + depth];\n",
+        "            //sum += a[depth * n * n + row * n + k] * b[k * n * n + col * n + depth];\n",
+        "            sum += a[depth * n * n + row * n + k * n] * b[k * n * n + col + depth * n];\n",
         "        }\n",
         "        c[depth * n * n + row * n + col] = sum;\n",
         "    }\n",
         "}\n",
         "\n",
-        "__global__ void shared_matrixMul3D(int *a, int *b, int *c, int n)\n",
+        "__global__ void share_matrixMul3D(int *a, int *b, int *c, int n)\n",
         "{\n",
         "    \n",
         "    // 2.4 Creez les matrices 3D shared_a et shared_b dans la mémoire partagée, de type int et de taille BLOCK_SIZE*BLOCK_SIZE*BLOCK_SIZE.\n",
@@ -749,27 +750,34 @@
         "    int sum = 0;\n",
         "\n",
         "    // 2.6 Implémentez le produit matriciel dans la mémoire partagée.\n",
+        "    \n",
         "\n",
         "    for(int m = 0; m < gridDim.x; m++){\n",
         "\n",
         "      int h_stride = m * BLOCK_SIZE;\n",
-        "      int v_stride = m * BLOCK_SIZE * n * n;\n",
+        "      int v_stride = m * BLOCK_SIZE * n ;\n",
         "\n",
         "      shared_a[threadIdx.z][threadIdx.y][threadIdx.x] = a[(depth * n * n) + (row * n) + (h_stride + threadIdx.x)];\n",
-        "      shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(h_stride + threadIdx.y) * n * n + col + v_stride];\n",
+        "      shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(h_stride + threadIdx.y) * n + col ];\n",
         "\n",
         "      __syncthreads();\n",
         "\n",
         "      for (int i = 0; i < BLOCK_SIZE; i++) {\n",
+        "        if((depth * n * n + row * n + col) == 0){\n",
+        "                printf(\"valeur de x : %i , valeur de y : %i \\n\", shared_a[threadIdx.z][threadIdx.y][i], shared_b[threadIdx.z][i][threadIdx.x]);\n",
+        "        }\n",
         "          sum += shared_a[threadIdx.z][threadIdx.y][i] * shared_b[threadIdx.z][i][threadIdx.x];\n",
         "      }\n",
         "\n",
         "      __syncthreads();\n",
+        "      \n",
         "    }\n",
         "\n",
         "    if (depth < n && row < n && col < n) {\n",
         "      c[depth * n * n + row * n + col] = sum;\n",
         "    }\n",
+        "\n",
+        "    \n",
         "}\n",
         "\n",
         "void print_matrix(int*a, int n){\n",
@@ -787,7 +795,7 @@
         "int main()\n",
         "{\n",
         "    int n = 4;\n",
-        "    int size = n * n * n * sizeof(float);\n",
+        "    int size = n * n * n * sizeof(int);\n",
         "    int *h_a = (int*)malloc(size);\n",
         "    int *h_b = (int*)malloc(size);\n",
         "    int *h_c = (int*)malloc(size);\n",
@@ -814,8 +822,10 @@
         "    cudaMemcpy(d_b, h_b, size, cudaMemcpyHostToDevice);\n",
         "\n",
         "    dim3 threadsPerBlock(BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE);\n",
-        "    dim3 blocksPerGrid(BLOCK_SIZE / n,BLOCK_SIZE / n,BLOCK_SIZE / n );\n",
-        "    matrixMul3D<<<blocksPerGrid, threadsPerBlock>>>(d_a, d_b, d_c, n);\n",
+        "    dim3 blocksPerGrid(BLOCK_SIZE ,BLOCK_SIZE ,BLOCK_SIZE );\n",
+        "\n",
+        "    share_matrixMul3D<<<blocksPerGrid, threadsPerBlock>>>(d_a, d_b, d_c, n);\n",
+        "\n",
         "\n",
         "    cudaMemcpy(h_c, d_c, size, cudaMemcpyDeviceToHost); \n",
         "\n",
@@ -836,9 +846,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd191189-a3f3-48f8-f74b-23ef0a4e0243"
+        "outputId": "653e9bdd-5502-47e6-f1eb-95b515aa21c5"
       },
-      "execution_count": 20,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,18 +866,26 @@
       ],
       "metadata": {
         "id": "fZNKLH3Cz-Ly",
-        "outputId": "79a0c36a-30ae-4bab-d0a5-f9040251e27e",
+        "outputId": "88c27107-ec62-4876-ddc1-1c3c84286b18",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "nvcc -c -o program.o program.cu -gencode arch=compute_75,code=sm_75 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_87,code=sm_87 \n",
+            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
+            "\n",
+            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
+            "\n",
+            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
+            "\n",
+            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
+            "\n",
             "nvcc -o program program.o -gencode arch=compute_75,code=sm_75 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_87,code=sm_87 \n"
           ]
         }
@@ -880,12 +898,12 @@
       ],
       "metadata": {
         "id": "Zn-q9uA1n7o6",
-        "outputId": "f4f8a97f-ea73-4d4d-865d-7e316f9ffd11",
+        "outputId": "10e68452-d7a5-40a5-8e0f-c0289eabef6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,16 +951,24 @@
             "112\t114\t116\t118\t\n",
             "120\t122\t124\t126\t\n",
             "\n",
+            "valeur de x : 0 , valeur de y : 0 \n",
+            "valeur de x : 0 , valeur de y : 0 \n",
+            "valeur de x : 1 , valeur de y : 8 \n",
+            "valeur de x : 1 , valeur de y : 8 \n",
+            "valeur de x : 2 , valeur de y : 16 \n",
+            "valeur de x : 2 , valeur de y : 16 \n",
+            "valeur de x : 3 , valeur de y : 24 \n",
+            "valeur de x : 3 , valeur de y : 24 \n",
             "Matrix c :\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
+            "112\t124\t136\t148\t\n",
+            "304\t348\t392\t436\t\n",
+            "496\t572\t648\t724\t\n",
+            "688\t796\t904\t1012\t\n",
             "\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
+            "880\t1020\t1160\t1300\t\n",
+            "1072\t1244\t1416\t1588\t\n",
+            "1264\t1468\t1672\t1876\t\n",
+            "1456\t1692\t1928\t2164\t\n",
             "\n",
             "0\t0\t0\t0\t\n",
             "0\t0\t0\t0\t\n",
