bon sauf pour la colonne 2 et 4 qui sont decalé de 1

--- a/TP5.ipynb
+++ b/TP5.ipynb
@@ -30,7 +30,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "OJjU5zI_-tjl",
-        "outputId": "f80620d2-6a3d-49a1-ac72-6ef62617a182",
+        "outputId": "a108f78a-4e5a-4c1f-9a54-ecdfde9a405d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -59,7 +59,7 @@
       ],
       "metadata": {
         "id": "HBZjh4P4-1HE",
-        "outputId": "ad22b4a9-9aa7-4880-f4ed-88c47ec9f04b",
+        "outputId": "a95b28aa-ad75-4022-bdb3-f1543f25c538",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,14 +72,14 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-pkkyaxr6\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-pkkyaxr6\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-wr0izjtj\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-wr0izjtj\n",
             "  Resolved https://github.com/andreinechaev/nvcc4jupyter.git to commit aac710a35f52bb78ab34d2e52517237941399eff\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4305 sha256=0835ade09d77b38a8559fad56c5b2e7f42f3735b5b3323b097f64a30224fa313\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-udhk3ra8/wheels/db/c1/1f/a2bb07bbb4a1ce3c43921252aeafaa6205f08637e292496f04\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4305 sha256=33d07f74a3959244d9ecf6ecfb400f6b3112d6d4fdbbb6702718cb9b9ac9a247\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-f36ihvnr/wheels/db/c1/1f/a2bb07bbb4a1ce3c43921252aeafaa6205f08637e292496f04\n",
             "Successfully built NVCCPlugin\n",
             "Installing collected packages: NVCCPlugin\n",
             "Successfully installed NVCCPlugin-0.0.2\n"
@@ -108,7 +108,7 @@
       ],
       "metadata": {
         "id": "9gl_4Pn7_JR2",
-        "outputId": "ab6cc9ca-2dd5-44b9-a8bb-106c16fdbdc5",
+        "outputId": "17155109-3fd7-488e-d02c-0f394a16812b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -119,7 +119,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Wed Mar 29 13:05:53 2023       \n",
+            "Fri Mar 31 12:40:01 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -128,7 +128,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   46C    P8    10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   53C    P8    10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -159,7 +159,7 @@
       ],
       "metadata": {
         "id": "6YGSePh_Q_DP",
-        "outputId": "f3a6d6ca-ec5a-40ed-e6fa-b7849620fed9",
+        "outputId": "20408a0d-10ad-461e-9af5-11563742f6b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -229,7 +229,7 @@
       ],
       "metadata": {
         "id": "2VMs5wjdRU0g",
-        "outputId": "b27595de-2b22-4834-d3b3-6e277cf384ee",
+        "outputId": "4087a709-ec1c-4b75-9f84-2b7b2a0d3f7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,7 +460,7 @@
       ],
       "metadata": {
         "id": "o8DiZxqTVzyD",
-        "outputId": "76cf0e8c-ebd3-4caf-dbd7-339c2ee1e7f7",
+        "outputId": "af963d47-f25e-4665-ff29-82a8a0dabe85",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -595,18 +595,18 @@
       ],
       "metadata": {
         "id": "Rm-7gDO8BGH_",
-        "outputId": "e8b38751-cfc7-4d12-a872-eb5a156a704c",
+        "outputId": "a73e1aa0-7148-4922-e1df-d5f13ebb9322",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting program.cu\n"
+            "Writing program.cu\n"
           ]
         }
       ]
@@ -618,12 +618,12 @@
       ],
       "metadata": {
         "id": "PfakPQ1CHLUp",
-        "outputId": "6624ba5a-6b11-4d25-bcb9-ce2e43af7066",
+        "outputId": "afcade90-bab1-48c0-c349-ef2ce4ca8b8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,12 +642,12 @@
       ],
       "metadata": {
         "id": "F4BRhsCtHLo6",
-        "outputId": "f83ec60e-6c8f-4a8a-8399-be7e33458c39",
+        "outputId": "cc1730c7-cadc-486c-ffe4-d08e3fbfeca3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,56 +728,45 @@
         "\n",
         "        for (int k = 0; k < n; k++) {\n",
         "            //sum += a[depth * n * n + row * n + k] * b[k * n * n + col * n + depth];\n",
-        "            sum += a[depth * n * n + row * n + k * n] * b[k * n * n + col + depth * n];\n",
-        "        }\n",
+        "            sum += a[depth * n * n + row * n + k] * b[k * n + col];        }\n",
         "        c[depth * n * n + row * n + col] = sum;\n",
         "    }\n",
         "}\n",
         "\n",
-        "__global__ void share_matrixMul3D(int *a, int *b, int *c, int n)\n",
+        "__global__ void shared_matrixMul3D(int *a, int *b, int *c, int n)\n",
         "{\n",
-        "    \n",
         "    // 2.4 Creez les matrices 3D shared_a et shared_b dans la mémoire partagée, de type int et de taille BLOCK_SIZE*BLOCK_SIZE*BLOCK_SIZE.\n",
         "    __shared__ int shared_a[BLOCK_SIZE][BLOCK_SIZE][BLOCK_SIZE];\n",
         "    __shared__ int shared_b[BLOCK_SIZE][BLOCK_SIZE][BLOCK_SIZE];\n",
         "\n",
-        "\n",
         "    // 2.5 Trouver le bon index des threads pour les colonnes (col) les lignes (row) et la profondeur (depth).\n",
-        "    int col = blockIdx.x * blockDim.x + threadIdx.x;\n",
-        "    int row = blockIdx.y * blockDim.y + threadIdx.y;\n",
-        "    int depth = threadIdx.z;\n",
+        "    int col = threadIdx.x + blockIdx.x * blockDim.x;\n",
+        "    int row = threadIdx.y + blockIdx.y * blockDim.y;\n",
+        "    int depth = threadIdx.z + blockIdx.z * blockDim.z;\n",
         "\n",
         "    int sum = 0;\n",
-        "\n",
         "    // 2.6 Implémentez le produit matriciel dans la mémoire partagée.\n",
-        "    \n",
+        "    for (int m = 0; m < gridDim.x; m++) {\n",
         "\n",
-        "    for(int m = 0; m < gridDim.x; m++){\n",
+        "        int h_stride = m * BLOCK_SIZE;\n",
+        "        int v_stride = m * BLOCK_SIZE  ;\n",
+        "        shared_a[threadIdx.z][threadIdx.y][threadIdx.x] = a[depth * n * n + row * n + h_stride + threadIdx.x];\n",
+        "        shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(v_stride + threadIdx.y) * n + col + threadIdx.x];\n",
         "\n",
-        "      int h_stride = m * BLOCK_SIZE;\n",
-        "      int v_stride = m * BLOCK_SIZE * n ;\n",
+        "        __syncthreads();\n",
         "\n",
-        "      shared_a[threadIdx.z][threadIdx.y][threadIdx.x] = a[(depth * n * n) + (row * n) + (h_stride + threadIdx.x)];\n",
-        "      shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(h_stride + threadIdx.y) * n + col ];\n",
-        "\n",
-        "      __syncthreads();\n",
-        "\n",
-        "      for (int i = 0; i < BLOCK_SIZE; i++) {\n",
-        "        if((depth * n * n + row * n + col) == 0){\n",
+        "        for (int i = 0; i < BLOCK_SIZE; i++) {\n",
+        "          if((depth * n * n + row * n + col) == 5){\n",
         "                printf(\"valeur de x : %i , valeur de y : %i \\n\", shared_a[threadIdx.z][threadIdx.y][i], shared_b[threadIdx.z][i][threadIdx.x]);\n",
+        "          }\n",
+        "            sum += shared_a[threadIdx.z][threadIdx.y][i] * shared_b[threadIdx.z][i][threadIdx.x];\n",
         "        }\n",
-        "          sum += shared_a[threadIdx.z][threadIdx.y][i] * shared_b[threadIdx.z][i][threadIdx.x];\n",
-        "      }\n",
         "\n",
-        "      __syncthreads();\n",
-        "      \n",
+        "        __syncthreads();\n",
         "    }\n",
         "\n",
-        "    if (depth < n && row < n && col < n) {\n",
-        "      c[depth * n * n + row * n + col] = sum;\n",
-        "    }\n",
         "\n",
-        "    \n",
+        "    c[depth * n * n + row * n + col] = sum;\n",
         "}\n",
         "\n",
         "void print_matrix(int*a, int n){\n",
@@ -800,8 +789,6 @@
         "    int *h_b = (int*)malloc(size);\n",
         "    int *h_c = (int*)malloc(size);\n",
         "\n",
-        "\n",
-        "\n",
         "    for (int i = 0; i < n * n * n; ++i) {\n",
         "        h_a[i] = i;\n",
         "        h_b[i] = i*2;\n",
@@ -821,11 +808,27 @@
         "    cudaMemcpy(d_a, h_a, size, cudaMemcpyHostToDevice);\n",
         "    cudaMemcpy(d_b, h_b, size, cudaMemcpyHostToDevice);\n",
         "\n",
+        "    ////// SHARED VERSION ///////\n",
+        "\n",
         "    dim3 threadsPerBlock(BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE);\n",
-        "    dim3 blocksPerGrid(BLOCK_SIZE ,BLOCK_SIZE ,BLOCK_SIZE );\n",
+        "    dim3 blocksPerGrid((n + threadsPerBlock.x - 1) / threadsPerBlock.x,\n",
+        "                       (n + threadsPerBlock.y - 1) / threadsPerBlock.y,\n",
+        "                       (n + threadsPerBlock.z - 1) / threadsPerBlock.z);\n",
         "\n",
-        "    share_matrixMul3D<<<blocksPerGrid, threadsPerBlock>>>(d_a, d_b, d_c, n);\n",
+        "    shared_matrixMul3D<<<blocksPerGrid, threadsPerBlock>>>(d_a, d_b, d_c, n);\n",
         "\n",
+        "\n",
+        "    cudaMemcpy(h_c, d_c, size, cudaMemcpyDeviceToHost); \n",
+        "\n",
+        "    printf(\"Matrix c :\\n\");\n",
+        "    print_matrix(h_c, n);\n",
+        "\n",
+        "    ////// NORMAL VERSION ///////\n",
+        "\n",
+        "    dim3 threadsPerBlock2(BLOCK_SIZE * 2, BLOCK_SIZE * 2, BLOCK_SIZE * 2);\n",
+        "    dim3 blocksPerGrid2(BLOCK_SIZE, BLOCK_SIZE,  BLOCK_SIZE);\n",
+        "\n",
+        "    matrixMul3D<<<blocksPerGrid2, threadsPerBlock2>>>(d_a, d_b, d_c, n);\n",
         "\n",
         "    cudaMemcpy(h_c, d_c, size, cudaMemcpyDeviceToHost); \n",
         "\n",
@@ -846,9 +849,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "653e9bdd-5502-47e6-f1eb-95b515aa21c5"
+        "outputId": "04bafc52-6824-465e-acc4-6fb31f46db7a"
       },
-      "execution_count": 126,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,26 +869,18 @@
       ],
       "metadata": {
         "id": "fZNKLH3Cz-Ly",
-        "outputId": "88c27107-ec62-4876-ddc1-1c3c84286b18",
+        "outputId": "2191d546-0823-407c-8a73-5094a9401a00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 127,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "nvcc -c -o program.o program.cu -gencode arch=compute_75,code=sm_75 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_87,code=sm_87 \n",
-            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
-            "\n",
-            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
-            "\n",
-            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
-            "\n",
-            "\u001b[01m\u001b[0m\u001b[01mprogram.cu(46)\u001b[0m: \u001b[01;35mwarning\u001b[0m #177-D: variable \u001b[01m\"v_stride\"\u001b[0m was declared but never referenced\n",
-            "\n",
             "nvcc -o program program.o -gencode arch=compute_75,code=sm_75 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_87,code=sm_87 \n"
           ]
         }
@@ -898,12 +893,12 @@
       ],
       "metadata": {
         "id": "Zn-q9uA1n7o6",
-        "outputId": "10e68452-d7a5-40a5-8e0f-c0289eabef6a",
+        "outputId": "7cecc161-5d32-48a4-aab5-f489e785d65a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 128,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,14 +946,31 @@
             "112\t114\t116\t118\t\n",
             "120\t122\t124\t126\t\n",
             "\n",
-            "valeur de x : 0 , valeur de y : 0 \n",
-            "valeur de x : 0 , valeur de y : 0 \n",
-            "valeur de x : 1 , valeur de y : 8 \n",
-            "valeur de x : 1 , valeur de y : 8 \n",
-            "valeur de x : 2 , valeur de y : 16 \n",
-            "valeur de x : 2 , valeur de y : 16 \n",
-            "valeur de x : 3 , valeur de y : 24 \n",
-            "valeur de x : 3 , valeur de y : 24 \n",
+            "valeur de x : 4 , valeur de y : 4 \n",
+            "valeur de x : 5 , valeur de y : 12 \n",
+            "valeur de x : 6 , valeur de y : 20 \n",
+            "valeur de x : 7 , valeur de y : 28 \n",
+            "Matrix c :\n",
+            "112\t136\t136\t160\t\n",
+            "304\t392\t392\t480\t\n",
+            "496\t648\t648\t800\t\n",
+            "688\t904\t904\t1120\t\n",
+            "\n",
+            "880\t1160\t1160\t1440\t\n",
+            "1072\t1416\t1416\t1760\t\n",
+            "1264\t1672\t1672\t2080\t\n",
+            "1456\t1928\t1928\t2400\t\n",
+            "\n",
+            "1648\t2184\t2184\t2720\t\n",
+            "1840\t2440\t2440\t3040\t\n",
+            "2032\t2696\t2696\t3360\t\n",
+            "2224\t2952\t2952\t3680\t\n",
+            "\n",
+            "2416\t3208\t3208\t4000\t\n",
+            "2608\t3464\t3464\t4320\t\n",
+            "2800\t3720\t3720\t4640\t\n",
+            "2992\t3976\t3976\t4960\t\n",
+            "\n",
             "Matrix c :\n",
             "112\t124\t136\t148\t\n",
             "304\t348\t392\t436\t\n",
@@ -970,15 +982,15 @@
             "1264\t1468\t1672\t1876\t\n",
             "1456\t1692\t1928\t2164\t\n",
             "\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
+            "1648\t1916\t2184\t2452\t\n",
+            "1840\t2140\t2440\t2740\t\n",
+            "2032\t2364\t2696\t3028\t\n",
+            "2224\t2588\t2952\t3316\t\n",
             "\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
-            "0\t0\t0\t0\t\n",
+            "2416\t2812\t3208\t3604\t\n",
+            "2608\t3036\t3464\t3892\t\n",
+            "2800\t3260\t3720\t4180\t\n",
+            "2992\t3484\t3976\t4468\t\n",
             "\n"
           ]
         }
