--- a/TP5.ipynb
+++ b/TP5.ipynb
@@ -728,7 +728,8 @@
         "\n",
         "        for (int k = 0; k < n; k++) {\n",
         "            //sum += a[depth * n * n + row * n + k] * b[k * n * n + col * n + depth];\n",
-        "            sum += a[depth * n * n + row * n + k] * b[k * n + col];        }\n",
+        "            sum += a[depth * n * n + row * n + k] * b[k * n + col];        \n",
+        "        }\n",
         "        c[depth * n * n + row * n + col] = sum;\n",
         "    }\n",
         "}\n",
@@ -751,7 +752,9 @@
         "        int h_stride = m * BLOCK_SIZE;\n",
         "        int v_stride = m * BLOCK_SIZE  ;\n",
         "        shared_a[threadIdx.z][threadIdx.y][threadIdx.x] = a[depth * n * n + row * n + h_stride + threadIdx.x];\n",
-        "        shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(v_stride + threadIdx.y) * n + col + threadIdx.x];\n",
+        "        shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(v_stride + threadIdx.y) * n + col + threadIdx.z];\n",
+        "        //shared_b[threadIdx.z][threadIdx.y][threadIdx.x] = b[(v_stride + threadIdx.y) * n + col * m + threadIdx.x];\n",
+        "\n",
         "\n",
         "        __syncthreads();\n",
         "\n",
@@ -849,9 +852,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "04bafc52-6824-465e-acc4-6fb31f46db7a"
+        "outputId": "1205f9d0-098c-4538-f619-d71ab57aacaf"
       },
-      "execution_count": 180,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,12 +872,12 @@
       ],
       "metadata": {
         "id": "fZNKLH3Cz-Ly",
-        "outputId": "2191d546-0823-407c-8a73-5094a9401a00",
+        "outputId": "5745ae5b-09b4-4664-fccb-def18b03e8fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 181,
+      "execution_count": 219,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,12 +896,12 @@
       ],
       "metadata": {
         "id": "Zn-q9uA1n7o6",
-        "outputId": "7cecc161-5d32-48a4-aab5-f489e785d65a",
+        "outputId": "01f7fe30-0ec8-4697-9d3d-a8b26177d8fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 182,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,30 +949,30 @@
             "112\t114\t116\t118\t\n",
             "120\t122\t124\t126\t\n",
             "\n",
-            "valeur de x : 4 , valeur de y : 4 \n",
-            "valeur de x : 5 , valeur de y : 12 \n",
-            "valeur de x : 6 , valeur de y : 20 \n",
-            "valeur de x : 7 , valeur de y : 28 \n",
+            "valeur de x : 4 , valeur de y : 2 \n",
+            "valeur de x : 5 , valeur de y : 10 \n",
+            "valeur de x : 6 , valeur de y : 18 \n",
+            "valeur de x : 7 , valeur de y : 26 \n",
             "Matrix c :\n",
-            "112\t136\t136\t160\t\n",
-            "304\t392\t392\t480\t\n",
-            "496\t648\t648\t800\t\n",
-            "688\t904\t904\t1120\t\n",
+            "112\t124\t136\t148\t\n",
+            "304\t348\t392\t436\t\n",
+            "496\t572\t648\t724\t\n",
+            "688\t796\t904\t1012\t\n",
             "\n",
-            "880\t1160\t1160\t1440\t\n",
-            "1072\t1416\t1416\t1760\t\n",
-            "1264\t1672\t1672\t2080\t\n",
-            "1456\t1928\t1928\t2400\t\n",
+            "1020\t1160\t1300\t1440\t\n",
+            "1244\t1416\t1588\t1760\t\n",
+            "1468\t1672\t1876\t2080\t\n",
+            "1692\t1928\t2164\t2400\t\n",
             "\n",
-            "1648\t2184\t2184\t2720\t\n",
-            "1840\t2440\t2440\t3040\t\n",
-            "2032\t2696\t2696\t3360\t\n",
-            "2224\t2952\t2952\t3680\t\n",
+            "1648\t1916\t2184\t2452\t\n",
+            "1840\t2140\t2440\t2740\t\n",
+            "2032\t2364\t2696\t3028\t\n",
+            "2224\t2588\t2952\t3316\t\n",
             "\n",
-            "2416\t3208\t3208\t4000\t\n",
-            "2608\t3464\t3464\t4320\t\n",
-            "2800\t3720\t3720\t4640\t\n",
-            "2992\t3976\t3976\t4960\t\n",
+            "2812\t3208\t3604\t4000\t\n",
+            "3036\t3464\t3892\t4320\t\n",
+            "3260\t3720\t4180\t4640\t\n",
+            "3484\t3976\t4468\t4960\t\n",
             "\n",
             "Matrix c :\n",
             "112\t124\t136\t148\t\n",
